fix: Fix centering logo on collapse

--- a/src/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_menu.sass
+++ b/src/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_menu.sass
@@ -38,6 +38,8 @@
     &__img
       margin: 13px
       max-height: 34px
+    &__img--collapsed
+      width: 100%
     &-version
       color: #838d9a;
       font-size: 10px;
